apps/oxlint/src/snapshots/fixtures__cli__ignore_file_current_dir_ .@oxlint.snap
---
source: apps/oxlint/src/tester.rs
---
########## 
arguments: 
working directory: fixtures/cli/ignore_file_current_dir
----------
Found 0 warnings and 0 errors.
Finished in <variable>ms on 0 files with 1 rules using 1 threads.
----------
CLI result: LintSucceeded
----------

########## 
arguments: .
working directory: fixtures/cli/ignore_file_current_dir
----------
Found 0 warnings and 0 errors.
Finished in <variable>ms on 0 files with 1 rules using 1 threads.
----------
CLI result: LintSucceeded
----------
