apps/oxlint/src/snapshots/fixtures__cli__ignore_patterns_empty_nested_ .@oxlint.snap
---
source: apps/oxlint/src/tester.rs
---
########## 
arguments: 
working directory: fixtures/cli/ignore_patterns_empty_nested
----------

  x eslint(no-debugger): `debugger` statement is not allowed
   ,-[another_config/not-ignored-file.ts:1:1]
 1 | debugger;
   : ^^^^^^^^^
 2 | 
   `----
  help: Remove the debugger statement

Found 0 warnings and 1 error.
Finished in <variable>ms on 1 file using 1 threads.
----------
CLI result: LintFoundErrors
----------

########## 
arguments: .
working directory: fixtures/cli/ignore_patterns_empty_nested
----------

  x eslint(no-debugger): `debugger` statement is not allowed
   ,-[another_config/not-ignored-file.ts:1:1]
 1 | debugger;
   : ^^^^^^^^^
 2 | 
   `----
  help: Remove the debugger statement

Found 0 warnings and 1 error.
Finished in <variable>ms on 1 file using 1 threads.
----------
CLI result: LintFoundErrors
----------
