apps/oxlint/src/snapshots/fixtures__cli__ignore_patterns_relative_ .@oxlint.snap
---
source: apps/oxlint/src/tester.rs
---
########## 
arguments: 
working directory: fixtures/cli/ignore_patterns_relative
----------

  ! eslint(no-debugger): `debugger` statement is not allowed
   ,-[nested/should_not_be_ignored.js:1:1]
 1 | debugger;
   : ^^^^^^^^^
   `----
  help: Remove the debugger statement

  ! eslint(no-debugger): `debugger` statement is not allowed
   ,-[should_not_be_ignored.ts:1:1]
 1 | debugger;
   : ^^^^^^^^^
   `----
  help: Remove the debugger statement

Found 2 warnings and 0 errors.
Finished in <variable>ms on 2 files with 1 rules using 1 threads.
----------
CLI result: LintSucceeded
----------

########## 
arguments: .
working directory: fixtures/cli/ignore_patterns_relative
----------

  ! eslint(no-debugger): `debugger` statement is not allowed
   ,-[nested/should_not_be_ignored.js:1:1]
 1 | debugger;
   : ^^^^^^^^^
   `----
  help: Remove the debugger statement

  ! eslint(no-debugger): `debugger` statement is not allowed
   ,-[should_not_be_ignored.ts:1:1]
 1 | debugger;
   : ^^^^^^^^^
   `----
  help: Remove the debugger statement

Found 2 warnings and 0 errors.
Finished in <variable>ms on 2 files with 1 rules using 1 threads.
----------
CLI result: LintSucceeded
----------
